--- a/interactive-card-details-form/package.json
+++ b/interactive-card-details-form/package.json
@@ -4,7 +4,8 @@
   "description": "This is a solution to the [Interactive card details form challenge on Frontend Mentor](https://www.frontendmentor.io/challenges/interactive-card-details-form-XpS8cKZDWw). Frontend Mentor challenges help you improve your coding skills by building realistic projects.",
   "main": "index.js",
   "scripts": {
-    "mix-watch": "mix watch"
+    "mix-watch": "mix watch",
+    "mix-prod": "mix --production"
   },
   "keywords": [],
   "author": "",
