add asset versions

--- a/interactive-card-details-form/public/mix-manifest.json
+++ b/interactive-card-details-form/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/main.js": "/main.js",
-    "/main.css": "/main.css"
+    "/main.js": "/main.js?id=94b1d89ddb4a0ce5e034593334b40866",
+    "/main.css": "/main.css?id=bd34d8f5ef4a026936e73cd817907ff2"
 }
