--- a/notifications-panel/package.json
+++ b/notifications-panel/package.json
@@ -1,11 +1,28 @@
 {
+  "name": "notifications-panel",
+  "version": "1.0.0",
+  "main": "index.js",
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
+    "style-loader": "^3.3.1",
     "vue": "^3.2.41",
     "vue-loader": "^17.0.0",
-    "vue-template-compiler": "^2.7.13",
-    "webpack": "^5.74.0"
-  }
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
