--- a/notifications-panel/package.json
+++ b/notifications-panel/package.json
@@ -15,11 +15,15 @@
     "vue": "^3.2.41",
     "vue-loader": "^17.0.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpackbar": "^5.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "prod": "webpack --node-env=production",
+    "dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
