--- a/notifications-panel/package.json
+++ b/notifications-panel/package.json
@@ -1,7 +1,6 @@
 {
   "name": "notifications-panel",
   "version": "1.0.0",
-  "main": "index.js",
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "css-loader": "^6.7.1",
@@ -21,9 +20,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "prod": "webpack --node-env=production",
-    "dev": "webpack-dev-server"
+    "build-dev": "webpack --mode=development --node-env=development",
+    "build-prod": "webpack --node-env=production --mode=production",
+    "dev-server": "webpack serve --open  --node-env=development"
   },
   "keywords": [],
   "author": "",
